added token refreshment
