# backend/docs/swagger.json
@@ -30,6 +30,26 @@
                 "responses": {}
             }
         },
+        "/auth/logout": {
+            "post": {
+                "description": "deletes your credentials",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logout",
+                "responses": {}
+            }
+        },
+        "/auth/refresh": {
+            "post": {
+                "description": "refresh your credentials",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Refresh",
+                "responses": {}
+            }
+        },
         "/deleteURL/{id}": {
             "delete": {
                 "description": "Delete link with id in case you are the owner of the link",
@@ -71,8 +91,8 @@
                             "$ref": "#/definitions/httputil.HTTPError"
                         }
                     },
-                    "403": {
-                        "description": "Forbidden",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/httputil.HTTPError"
                         }
@@ -133,8 +153,8 @@
                             "$ref": "#/definitions/httputil.HTTPError"
                         }
                     },
-                    "403": {
-                        "description": "Forbidden",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/httputil.HTTPError"
                         }
@@ -212,8 +232,8 @@
                             }
                         }
                     },
-                    "403": {
-                        "description": "Forbidden",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/httputil.HTTPError"
                         }
